# wip

./: .gitignore  CMakeLists.txt  CMakePresets.json
_TMP_/: CMakeLists.txt
_TMP_/benchmarks/: CMakeLists.txt  datetime_benchmark.cpp  ip_benchmark.cpp  logging_benchmark.cpp
_TMP_/benchmarks/datetime/: iso8601_benchmark.cpp
_TMP_/benchmarks/ip/: address_benchmark.cpp  dns_benchmark.cpp
_TMP_/benchmarks/logging/: logging_benchmark.cpp
_TMP_/benchmarks/threading/: locked_mpmc_queue_benchmark.cpp  lockfree_spsc_queue_benchmark.cpp  mpmc_queue_benchmark.cpp  queue_benchmark.cpp
_TMP_/include/datetime/: iso8601.hpp
_TMP_/include/ip/: address.hpp  dns.hpp  port.hpp  protocol.hpp  version.hpp
_TMP_/include/logging/: level.hpp  logger.hpp  logging.hpp  renderer.hpp  writer.hpp
_TMP_/include/queue/: mpmc_queue.hpp
_TMP_/include/threading/: locked_mpmc_queue.hpp  lockfree_spsc_queue.hpp  mpmc_queue.hpp
_TMP_/include/utils/: conditionally_runtime.hpp  constants.hpp  declarative.hpp  mixins.hpp  predicates.hpp
_TMP_/src/datetime/: iso8601.cpp
_TMP_/src/ip/: address.cpp  dns.cpp  port.cpp
_TMP_/src/logging/: logger.cpp  renderer.cpp  writer.cpp
_TMP_/tests/: CMakeLists.txt  datetime_test.cpp  ip_test.cpp  logging_test.cpp  queue_test.cpp
_TMP_/tests/datetime/: iso8601_test.cpp
_TMP_/tests/ip/: address_test.cpp  dns_test.cpp
_TMP_/tests/logging/: logging_test.cpp
_TMP_/tests/threading/: locked_mpmc_queue_test.cpp  lockfree_spsc_queue_test.cpp  mpmc_queue_test.cpp
_TMP_/tests/utils/: conditionally_runtime_test.cpp  predicates_test.cpp
core/: CMakeLists.txt
core/benchmarks/: CMakeLists.txt
core/benchmarks/datetime/: iso8601_benchmark.cpp
core/benchmarks/ip/: acceptor_benchmark.cpp  address_benchmark.cpp  dns_benchmark.cpp
core/benchmarks/ip/tcp/: acceptor_benchmark.cpp  connection_benchmark.cpp
core/benchmarks/logging/: logger_benchmark.cpp  logging_benchmark.cpp
core/benchmarks/net/dns/: resolve_benchmark.cpp
core/benchmarks/net/inet/: sockaddr_benchmark.cpp
core/benchmarks/net/inet6/: sockaddr_benchmark.cpp
core/benchmarks/net/ip/: address_benchmark.cpp  dns_benchmark.cpp
core/benchmarks/net/unix/: sockaddr_benchmark.cpp
core/benchmarks/queues/: locked_mpmc_queue_benchmark.cpp  lockfree_mpmc_queue_benchmark.cpp  lockfree_mpsc_queue_benchmark.cpp  lockfree_spmc_queue_benchmark.cpp  lockless_mpmc_queue_benchmark.cpp  waitfree_spsc_queue_benchmark.cpp
core/benchmarks/threading/: locked_mpmc_queue_benchmark.cpp  lockfree_mpmc_queue_benchmark.cpp  lockfree_mpsc_queue_benchmark.cpp  lockfree_spmc_queue_benchmark.cpp  lockfree_spsc_queue_benchmark.cpp  lockless_mpmc_queue_benchmark.cpp  waitfree_spsc_queue_benchmark.cpp
core/benchmarks/threadsafe/: locked_mpmc_queue_benchmark.cpp  lockfree_mpmc_queue_benchmark.cpp  lockfree_mpsc_queue_benchmark.cpp  lockfree_spmc_queue_benchmark.cpp  lockless_mpmc_queue_benchmark.cpp  waitfree_spsc_queue_benchmark.cpp
core/include/datetime/: iso8601.hpp
core/include/io/: fd.hpp  poller.hpp
core/include/ip/: acceptor.hpp  address.hpp  connection.hpp  dns.hpp  endpoint.hpp  port.hpp  protocol.hpp  socket.hpp  version.hpp
core/include/ip/tcp/: acceptor.hpp  connection.hpp  socket.hpp
core/include/ip/udp/: socket.hpp
core/include/logging/: level.hpp  logger.hpp  logging.hpp  renderer.hpp  writer.hpp
core/include/net/dns/: resolve.hpp
core/include/net/inet/: ip.hpp  port.hpp  sockaddr.hpp
core/include/net/inet6/: ip.hpp  port.hpp  (+1 more)
core/include/queues/: locked_mpmc_queue.hpp  lockfree_mpmc_queue.hpp  lockfree_mpsc_queue.hpp  lockfree_spmc_queue.hpp  lockless_mpmc_queue.hpp  waitfree_spsc_queue.hpp
core/include/threading/: locked_mpmc_queue.hpp  lockfree_mpmc_queue.hpp  lockfree_mpsc_queue.hpp  lockfree_spmc_queue.hpp  lockfree_spsc_queue.hpp  lockless_mpmc_queue.hpp  waitfree_spsc_queue.hpp
core/include/threadsafe/: locked_mpmc_queue.hpp  lockfree_mpmc_queue.hpp  lockfree_mpsc_queue.hpp  lockfree_spmc_queue.hpp  lockless_mpmc_queue.hpp  waitfree_spsc_queue.hpp
core/include/utils/: aligned.hpp  conditionally_runtime.hpp  constants.hpp  declarative.hpp  mixins.hpp  predicates.hpp  scope.hpp  static_pimpl.hpp  tags.hpp
core/src/datetime/: iso8601.cpp
core/src/io/: fd.cpp  poller.cpp
core/src/ip/: acceptor.cpp  address.cpp  connection.cpp  dns.cpp  endpoint.cpp  port.cpp  socket.cpp
core/src/logging/: logger.cpp  renderer.cpp  writer.cpp
core/tests/: CMakeLists.txt
core/tests/datetime/: iso8601_test.cpp
core/tests/io/: fd_test.cpp  poller_test.cpp
core/tests/ip/: acceptor_test.cpp  address_test.cpp  dns_test.cpp  endpoint_test.cpp  port_test.cpp  socket_test.cpp
core/tests/logging/: logger_test.cpp  logging_test.cpp
core/tests/queues/: locked_mpmc_queue_test.cpp  lockfree_mpmc_queue_test.cpp  lockfree_mpsc_queue_test.cpp  lockfree_spmc_queue_test.cpp  lockless_mpmc_queue_test.cpp  waitfree_spsc_queue_test.cpp
core/tests/threading/: locked_mpmc_queue_test.cpp  lockfree_mpmc_queue_test.cpp  lockfree_mpsc_queue_test.cpp  lockfree_spmc_queue_test.cpp  lockfree_spsc_queue_test.cpp  lockless_mpmc_queue_test.cpp  waitfree_spsc_queue_test.cpp
core/tests/threadsafe/: locked_mpmc_queue_test.cpp  lockfree_mpmc_queue_test.cpp  lockfree_mpsc_queue_test.cpp  lockfree_spmc_queue_test.cpp  lockless_mpmc_queue_test.cpp  waitfree_spsc_queue_test.cpp
core/tests/utils/: aligned_test.cpp  conditionally_runtime_test.cpp  predicates_test.cpp  static_pimpl_test.cpp
todo/: CMakeLists.txt
todo/benchmarks/: CMakeLists.txt  datetime_benchmark.cpp  ip_benchmark.cpp  logging_benchmark.cpp
todo/include/datetime/: fmt.hpp  iso8601.hpp
todo/include/ip/: address.hpp  dns.hpp  port.hpp  protocol.hpp  version.hpp
todo/include/logging/: fmt.hpp  level.hpp  logger.hpp  logging.hpp  renderer.hpp  writer.hpp
todo/include/utils/: declarative.hpp  mixins.hpp
todo/src/datetime/: fmt.cpp  iso8601.cpp  serialization.cpp
todo/src/ip/: address.cpp  dns.cpp
todo/src/logging/: logger.cpp  renderer.cpp  writer.cpp
todo/tests/: CMakeLists.txt  datetime_test.cpp  ip_test.cpp  logging_test.cpp
(+94 files in other folders)
